2004-06-02  David N. Welton  <davidw@dedasys.com>

	* src/buildscripts/aardvark.tcl: Use 'Output' instead of puts.  It
	might be useful were we ever to do something like make an aardvark
	GUI.

2004-06-01  David N. Welton  <davidw@dedasys.com>

	* Following changes by Pat Thoyts  <patthoyts@users.sourceforge.net>:
	* win/makefile.vc: Updated to deal with the START_TAG END_TAG
	macros.
	* src/rivetParser.h: Declare missing prototype.
	* tests/binary.rvt: The stdout channel under Windows needs to be
	told to use translation binary for binary data.

2004-05-18  David N. Welton  <davidw@dedasys.com>

	* src/make.tcl: Quote Tcl argument.

	* doc/rivet.xml: Added clearer instructions for mailing list
	subscription.

2004-05-05  Karl Lehenbauer  <karl@sc.com>

	* src/rivetWWW.c: Made the escape_string command map spaces
	to plus signs (+) rather than %20.  They're equivalent and
	unescape the same, but the plus signs are visually easier
	to take.

2004-05-05  Karl Lehenbauer  <karl@sc.com>

	* /rivet/packages/dio/diodisplay.tcl: Got "-type boolean"
	working.  There's some problem with using a method that
	uses configvar to set a var as a method in a class where
	the class is being inherited by a subclass that redefines
	the variable.  I had to substitute "cget -varName" style
	to get it to work.

2004-05-05  Karl Lehenbauer  <karl@sc.com>

	* /rivet/packages/dio/diodisplay.tcl: Added "-type select"
	option to DIOdisplay fields, and a new option, "-values $list"
	which takes a list of values to be made available with a form
	selector.

2004-05-05  Karl Lehenbauer  <karl@sc.com>

	* /rivet/packages/dio/diodisplay.tcl: When adding a new record,
	if they've typed anything into the "is" field, set the default
	value of the field specified in the "where" part to match.

2004-05-05  Karl Lehenbauer  <karl@sc.com>

	* doc/rivet.xml: Documented the escape_string, unescape_string,
	escape_sgml_chars, and escape_shell_command functions.

2004-05-04  Karl Lehenbauer  <karl@sc.com>
